# yew-app

./: Cargo.toml  README.md  index.html
src/: main.rs  routes.rs
src/components/: header.rs  mealdisplay.rs  mod.rs  square.rs
src/models/: food.rs  mod.rs
src/pages/: dashboard.rs  home.rs  mealday.rs  mod.rs
