[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0.144", features = ["derive"] }
gloo-net = "0.2"
gloo-utils = "0.1.6"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4"
yew-router = "0.17.0"
wasm-bindgen = "0.2.83"
reqwest =  {version = "0.11.13", features=["json"]}
chrono = { version = "0.4.22", features = ["serde"] }